--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,308 @@
-*.class
+<!DOCTYPE html PUBLIC 
+<head>
+<SCRIPT LANGUAGE="JavaScript">
+<!-- Begin
+var x = "x.jpg";
+// Localiza en tu sitio donde cargaste la imagen x.jpg
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+var o = "o.jpg";
+// Localiza en tu sitio donde cargaste la imagen o.jpg
 
-# Package Files #
-*.jar
-*.war
-*.ear
+var blank = "blank.jpg";
+// Localiza en tu sitio donde cargaste la imagen blank.jpg
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+var pause = 0;
+var all = 0;
+var a = 0;
+var b = 0;
+var c = 0;
+var d = 0;
+var e = 0;
+var f = 0;
+var g = 0;
+var h = 0;
+var i = 0;
+var temp="";
+var ok = 0;
+var cf = 0;
+var choice=9;
+var aRandomNumber = 0;
+var comp = 0;
+var t = 0;
+var wn = 0;
+var ls = 0;
+var ts = 0;
+function help() {
+alert("¡Aspirina te da la bienvenida, juega Gato con nosotros! Esperamos seas un digno oponente.  Selecciona con tu dedo el cuadro en el que pondrás tu ficha.  No puedes presionar cuadros que ya estén ocupados. El primer jugador en obtener tres cuadros en línea GANA.  !!Buena Suerte!!")
+}
+function logicOne() {
+if ((a==1)&&(b==1)&&(c==1)) all=1;
+if ((a==1)&&(d==1)&&(g==1)) all=1;
+if ((a==1)&&(e==1)&&(i==1)) all=1;
+if ((b==1)&&(e==1)&&(h==1)) all=1;
+if ((d==1)&&(e==1)&&(f==1)) all=1;
+if ((g==1)&&(h==1)&&(i==1)) all=1;
+if ((c==1)&&(f==1)&&(i==1)) all=1;
+if ((g==1)&&(e==1)&&(c==1)) all=1;
+if ((a==2)&&(b==2)&&(c==2)) all=2;
+if ((a==2)&&(d==2)&&(g==2)) all=2;
+if ((a==2)&&(e==2)&&(i==2)) all=2;
+if ((b==2)&&(e==2)&&(h==2)) all=2;
+if ((d==2)&&(e==2)&&(f==2)) all=2;
+if ((g==2)&&(h==2)&&(i==2)) all=2;
+if ((c==2)&&(f==2)&&(i==2)) all=2;
+if ((g==2)&&(e==2)&&(c==2)) all=2;
+if ((a != 0)&&(b != 0)&&(c != 0)&&(d != 0)&&(e != 0)&&(f != 0)&&(g != 0)&&(h != 0)&&(i != 0)&&(all == 0)) all = 3;
+}
+function logicTwo() {
+if ((a==2)&&(b==2)&&(c== 0)&&(temp=="")) temp="C";
+if ((a==2)&&(b== 0)&&(c==2)&&(temp=="")) temp="B";
+if ((a== 0)&&(b==2)&&(c==2)&&(temp=="")) temp="A";
+if ((a==2)&&(d==2)&&(g== 0)&&(temp=="")) temp="G";
+if ((a==2)&&(d== 0)&&(g==2)&&(temp=="")) temp="D";
+if ((a== 0)&&(d==2)&&(g==2)&&(temp=="")) temp="A";
+if ((a==2)&&(e==2)&&(i== 0)&&(temp=="")) temp="I";
+if ((a==2)&&(e== 0)&&(i==2)&&(temp=="")) temp="E";
+if ((a== 0)&&(e==2)&&(i==2)&&(temp=="")) temp="A";
+if ((b==2)&&(e==2)&&(h== 0)&&(temp=="")) temp="H";
+if ((b==2)&&(e== 0)&&(h==2)&&(temp=="")) temp="E";
+if ((b== 0)&&(e==2)&&(h==2)&&(temp=="")) temp="B";
+if ((d==2)&&(e==2)&&(f== 0)&&(temp=="")) temp="F";
+if ((d==2)&&(e== 0)&&(f==2)&&(temp=="")) temp="E";
+if ((d== 0)&&(e==2)&&(f==2)&&(temp=="")) temp="D";
+if ((g==2)&&(h==2)&&(i== 0)&&(temp=="")) temp="I";
+if ((g==2)&&(h== 0)&&(i==2)&&(temp=="")) temp="H";
+if ((g== 0)&&(h==2)&&(i==2)&&(temp=="")) temp="G";
+if ((c==2)&&(f==2)&&(i== 0)&&(temp=="")) temp="I";
+if ((c==2)&&(f== 0)&&(i==2)&&(temp=="")) temp="F";
+if ((c== 0)&&(f==2)&&(i==2)&&(temp=="")) temp="C";
+if ((g==2)&&(e==2)&&(c== 0)&&(temp=="")) temp="C";
+if ((g==2)&&(e== 0)&&(c==2)&&(temp=="")) temp="E";
+if ((g== 0)&&(e==2)&&(c==2)&&(temp=="")) temp="G";
+}
+function logicThree() {
+if ((a==1)&&(b==1)&&(c==0)&&(temp=="")) temp="C";
+if ((a==1)&&(b==0)&&(c==1)&&(temp=="")) temp="B";
+if ((a==0)&&(b==1)&&(c==1)&&(temp=="")) temp="A";
+if ((a==1)&&(d==1)&&(g==0)&&(temp=="")) temp="G";
+if ((a==1)&&(d==0)&&(g==1)&&(temp=="")) temp="D";
+if ((a==0)&&(d==1)&&(g==1)&&(temp=="")) temp="A";
+if ((a==1)&&(e==1)&&(i==0)&&(temp=="")) temp="I";
+if ((a==1)&&(e==0)&&(i==1)&&(temp=="")) temp="E";
+if ((a==0)&&(e==1)&&(i==1)&&(temp=="")) temp="A";
+if ((b==1)&&(e==1)&&(h==0)&&(temp=="")) temp="H";
+if ((b==1)&&(e==0)&&(h==1)&&(temp=="")) temp="E";
+if ((b==0)&&(e==1)&&(h==1)&&(temp=="")) temp="B";
+if ((d==1)&&(e==1)&&(f==0)&&(temp=="")) temp="F";
+if ((d==1)&&(e==0)&&(f==1)&&(temp=="")) temp="E";
+if ((d==0)&&(e==1)&&(f==1)&&(temp=="")) temp="D";
+if ((g==1)&&(h==1)&&(i==0)&&(temp=="")) temp="I";
+if ((g==1)&&(h==0)&&(i==1)&&(temp=="")) temp="H";
+if ((g==0)&&(h==1)&&(i==1)&&(temp=="")) temp="G";
+if ((c==1)&&(f==1)&&(i==0)&&(temp=="")) temp="I";
+if ((c==1)&&(f==0)&&(i==1)&&(temp=="")) temp="F";
+if ((c==0)&&(f==1)&&(i==1)&&(temp=="")) temp="C";
+if ((g==1)&&(e==1)&&(c==0)&&(temp=="")) temp="C";
+if ((g==1)&&(e==0)&&(c==1)&&(temp=="")) temp="E";
+if ((g==0)&&(e==1)&&(c==1)&&(temp=="")) temp="G";
+}
+function clearOut() {
+document.game.you.value="0";
+document.game.computer.value="0";
+document.game.ties.value="0";
+}
+function checkSpace() {
+if ((temp=="A")&&(a==0)) {
+ok=1;
+if (cf==0) a=1;
+if (cf==1) a=2;
+}
+if ((temp=="B")&&(b==0)) {
+ok=1;
+if (cf==0) b=1;
+if (cf==1) b=2;
+}
+if ((temp=="C")&&(c==0)) {
+ok=1;
+if (cf==0) c=1;
+if (cf==1) c=2;
+}
+if ((temp=="D")&&(d==0)) {
+ok=1;
+if (cf==0) d=1;
+if (cf==1) d=2;
+}
+if ((temp=="E")&&(e==0)) {
+ok=1;
+if (cf==0) e=1;
+if (cf==1) e=2;
+}
+if ((temp=="F")&&(f==0)) {
+ok=1
+if (cf==0) f=1;
+if (cf==1) f=2;
+}
+if ((temp=="G")&&(g==0)) {
+ok=1
+if (cf==0) g=1;
+if (cf==1) g=2;
+}
+if ((temp=="H")&&(h==0)) {
+ok=1;
+if (cf==0) h=1;
+if (cf==1) h=2;
+}
+if ((temp=="I")&&(i==0)) {
+ok=1;
+if (cf==0) i=1;
+if (cf==1) i=2;
+}
+}
+function yourChoice(chName) {
+pause = 0;
+if (all!=0) ended();
+if (all==0) {
+cf = 0;
+ok = 0;
+temp=chName;
+checkSpace();
+if (ok==1) {
+document.images[chName].src = x;
+}
+if (ok==0)taken();
+process();
+if ((all==0)&&(pause==0)) myChoice();
+   }
+}
+function taken() {
+alert("Ese cuadro ya está ocupado.  Por favor elige otro cuadro.")
+pause=1;
+}
+function myChoice() {
+temp="";
+ok = 0;
+cf=1;
+logicTwo();
+logicThree();
+checkSpace();
+while(ok==0) {
+aRandomNumber=Math.random()
+comp=Math.round((choice-1)*aRandomNumber)+1;
+if (comp==1) temp="A";
+if (comp==2) temp="B";
+if (comp==3) temp="C";
+if (comp==4) temp="D";
+if (comp==5) temp="E";
+if (comp==6) temp="F";
+if (comp==7) temp="G";
+if (comp==8) temp="H";
+if (comp==9) temp="I";
+checkSpace();
+}
+document.images[temp].src= o;
+process();
+}
+function ended() {
+alert("Este juego ya ha finalizado. Para jugar nuevamente presiona la opción Volver a Jugar.")
+}
+function process() {
+logicOne();
+if (all==1){ alert("¡Ganaste, adios al Dolor de Cabeza con Aspirina!"); wn++; }
+if (all==2){ alert("¡Te tengo! ¡Gané!"); ls++; }
+if (all==3){ alert("Inténtalo nuevamente"); ts++; }
+if (all!=0) {
+document.game.you.value = wn;
+document.game.computer.value = ls;
+document.game.ties.value = ts;
+   }
+}
+function playAgain() {
+if (all==0) {
+if(confirm("Esto reiniciará el juego y limpiará los marcadores actuales. Estás de Acuerdo?")) reset();
+}
+if (all>0) reset();
+}
+function reset() {
+all = 0;
+a = 0;
+b = 0;
+c = 0;
+d = 0;
+e = 0;
+f = 0;
+g = 0;
+h = 0;
+i = 0;
+temp="";
+ok = 0;
+cf = 0;
+choice=9;
+aRandomNumber = 0;
+comp = 0;
+document.images.A.src= blank;
+document.images.B.src= blank;
+document.images.C.src= blank;
+document.images.D.src= blank;
+document.images.E.src= blank;
+document.images.F.src= blank;
+document.images.G.src= blank;
+document.images.H.src= blank;
+document.images.I.src= blank;
+if (t==0) { t=2; myChoice(); }
+t--;
+}
+//  End -->
+</script>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Gato =^..^=</title>
+</head>
+
+<body bgcolor="#5fceb2">
+<center>
+<form name=game>
+<table border=0>
+<td>
+<table border=1>
+<tr>
+<td><a href="javascript:yourChoice('A')"><img src="blank.jpg" border=0 height=200 width=200 name=A alt="Top-Left"></a></td>
+<td><a href="javascript:yourChoice('B')"><img src="blank.jpg" border=0 height=200 width=200 name=B alt="Top-Center"></a></td>
+<td><a href="javascript:yourChoice('C')"><img src="blank.jpg" border=0 height=200 width=200 name=C alt="Top-Right"></a></td>
+</tr>
+<tr>
+<td><a href="javascript:yourChoice('D')"><img src="blank.jpg" border=0 height=200 width=200 name=D alt="Middle-Left"></a></td>
+<td><a href="javascript:yourChoice('E')"><img src="blank.jpg" border=0 height=200 width=200 name=E alt="Middle-Center"></a></td>
+<td><a href="javascript:yourChoice('F')"><img src="blank.jpg" border=0 height=200 width=200 name=F alt="Middle-Right"></a></td>
+</tr>
+<tr>
+<td><a href="javascript:yourChoice('G')"><img src="blank.jpg" border=0 height=200 width=200 name=G alt="Bottom-Left"></a></td>
+<td><a href="javascript:yourChoice('H')"><img src="blank.jpg" border=0 height=200 width=200 name=H alt="Bottom-Center"></a></td>
+<td><a href="javascript:yourChoice('I')"><img src="blank.jpg" border=0 height=200 width=200 name=I alt="Bottom-Right"></a></td>
+</tr>
+</table>
+</td>
+<td>
+<table>
+<tr><td width="37"><input type=text size=5 name=you></td>
+<td width="42"><font color="#FFFFFF">Tu</td></tr>
+<tr><td><input type=text size=5 name=computer></td>
+<td><font color="#FFFFFF">Aspirina</td></tr>
+<tr><td><input type=text size=5 name=ties></td>
+<td><font color="#FFFFFF">Empate</td></tr>
+</table>
+</td>
+</table>
+<input type=button value="Volver a Jugar" onClick="playAgain();">
+&nbsp;&nbsp;
+<input type=button value="Ayuda" onClick="help();">
+&nbsp;&nbsp;
+</form>
+</center>
+<!-- CLOSE BUTTON -->
+<div class="td-center">
+<a href="javascript:self.close();"><img src="close-popup.png" class="pop-close" alt="Close"></a>
+<style>
+.pop-close	{ position: absolute; top: 11px; right: 7px; z-index: 30; }
+</style>
+</div>
+</body>
+</html>
